--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
 
   docker-push:
     runs-on: ubuntu-latest
+    needs: lint-html
     env:
       BRANCH_NAME: ${{ github.ref_name }}
     steps:
